@@ -187,6 +187,17 @@ class WC_Payments_Account {
 	}
 
 	/**
+	 * Gets the account live mode value.
+	 *
+	 * @return bool|null     Account is_live value.
+	 * @throws API_Exception Bubbles up from get_cached_account_data.
+	 */
+	public function get_is_live() {
+		$account = $this->get_cached_account_data();
+		return isset( $account['is_live'] ) ? $account['is_live'] : null;
+	}
+
+	/**
 	 * Utility function to immediately redirect to the main "Welcome to WooCommerce Payments" onboarding page.
 	 * Note that this function immediately ends the execution.
 	 *
