@@ -14,8 +14,31 @@ defined( 'ABSPATH' ) || exit;
  * Class handling any customer functionality
  */
 class WC_Payments_Customer_Service {
+	/**
+	 * Deprecated Stripe customer ID option.
+	 *
+	 * This option was used to store the customer_id in a WC_User options before we decoupled live and test customers.
+	 */
+	const DEPRECATED_WCPAY_CUSTOMER_ID_OPTION = '_wcpay_customer_id';
 
-	const WCPAY_CUSTOMER_ID_OPTION  = '_wcpay_customer_id';
+	/**
+	 * Live Stripe customer ID option.
+	 *
+	 * This option is used to store new live mode customers in a WC_User options. Customers stored in the deprecated
+	 * option are migrated to this one.
+	 */
+	const WCPAY_LIVE_CUSTOMER_ID_OPTION = '_wcpay_customer_id_live';
+
+	/**
+	 * Test Stripe customer ID option.
+	 *
+	 * This option is used to store new test mode customer IDs in a WC_User options.
+	 */
+	const WCPAY_TEST_CUSTOMER_ID_OPTION = '_wcpay_customer_id_test';
+
+	/**
+	 * Payment methods transient. Used in conjunction with the customer_id to cache a customer's payment methods.
+	 */
 	const PAYMENT_METHODS_TRANSIENT = 'wcpay_payment_methods_';
 
 	/**
@@ -26,12 +49,21 @@ class WC_Payments_Customer_Service {
 	private $payments_api_client;
 
 	/**
+	 * WC_Payments_Account instance to get information about the account
+	 *
+	 * @var WC_Payments_Account
+	 */
+	private $account;
+
+	/**
 	 * Class constructor
 	 *
 	 * @param WC_Payments_API_Client $payments_api_client Payments API client.
+	 * @param WC_Payments_Account    $account             WC_Payments_Account instance.
 	 */
-	public function __construct( WC_Payments_API_Client $payments_api_client ) {
+	public function __construct( WC_Payments_API_Client $payments_api_client, WC_Payments_Account $account ) {
 		$this->payments_api_client = $payments_api_client;
+		$this->account             = $account;
 	}
 
 	/**
@@ -47,12 +79,16 @@ class WC_Payments_Customer_Service {
 			return null;
 		}
 
-		$customer_id = get_user_option( self::WCPAY_CUSTOMER_ID_OPTION, $user_id );
+		$customer_id = get_user_option( $this->get_customer_id_option(), $user_id );
+
+		// If customer_id is false it could mean that it hasn't been migrated from the deprecated key.
 		if ( false === $customer_id ) {
-			return null;
+			$this->maybe_migrate_deprecated_customer( $user_id );
+			// Customer might've been migrated in maybe_migrate_deprecated_customer, so we need to fetch it again.
+			$customer_id = get_user_option( $this->get_customer_id_option(), $user_id );
 		}
 
-		return $customer_id;
+		return $customer_id ? $customer_id : null;
 	}
 
 	/**
@@ -73,7 +109,7 @@ class WC_Payments_Customer_Service {
 		$customer_id = $this->payments_api_client->create_customer( $name, $email, $description );
 
 		if ( $user->ID > 0 ) {
-			$result = update_user_option( $user->ID, self::WCPAY_CUSTOMER_ID_OPTION, $customer_id );
+			$result = update_user_option( $user->ID, $this->get_customer_id_option(), $customer_id );
 			if ( ! $result ) {
 				// Log the error, but continue since we have the customer ID we need.
 				Logger::error( 'Failed to store new customer ID for user ' . $user->ID );
@@ -240,7 +276,7 @@ class WC_Payments_Customer_Service {
 	 */
 	private function recreate_customer( $user, $name, $email ) {
 		if ( $user->ID > 0 ) {
-			$result = delete_user_option( $user->ID, self::WCPAY_CUSTOMER_ID_OPTION );
+			$result = delete_user_option( $user->ID, $this->get_customer_id_option() );
 			if ( ! $result ) {
 				// Log the error, but continue since we'll be trying to update this option in create_customer.
 				Logger::error( 'Failed to delete old customer ID for user ' . $user->ID );
@@ -248,5 +284,41 @@ class WC_Payments_Customer_Service {
 		}
 
 		return $this->create_customer_for_user( $user, $name, $email );
+	}
+
+	/**
+	 * Returns the name of the customer option meta, taking test mode into account.
+	 *
+	 * @return string The customer ID option name.
+	 */
+	private function get_customer_id_option(): string {
+		return WC_Payments::get_gateway()->is_in_test_mode()
+			? self::WCPAY_TEST_CUSTOMER_ID_OPTION
+			: self::WCPAY_LIVE_CUSTOMER_ID_OPTION;
+	}
+
+	/**
+	 * Migrate any customer ID that might be in the DEPRECATED_WCPAY_CUSTOMER_ID_OPTION.
+	 *
+	 * @param int $user_id The user ID to look for a customer ID with.
+	 */
+	private function maybe_migrate_deprecated_customer( $user_id ) {
+		$customer_id = get_user_option( self::DEPRECATED_WCPAY_CUSTOMER_ID_OPTION, $user_id );
+		if ( false !== $customer_id ) {
+			// A customer was found in the deprecated key. Migrate it to the appropriate one and delete the old meta.
+			// If an account is live mode, we optimistically assume that the customer is live mode, to avoid losing
+			// live mode customer data. If the account is not live mode, it can only have test mode objects, so we
+			// can safely migrate them to the test key.
+			// If is_live cannot be determined, default it to true to avoid considering a live account as test.
+			$account_is_live    = null === $this->account->get_is_live() || $this->account->get_is_live();
+			$customer_option_id = $account_is_live
+				? self::WCPAY_LIVE_CUSTOMER_ID_OPTION
+				: self::WCPAY_TEST_CUSTOMER_ID_OPTION;
+			if ( update_user_option( $user_id, $customer_option_id, $customer_id ) ) {
+				delete_user_option( $user_id, self::DEPRECATED_WCPAY_CUSTOMER_ID_OPTION );
+			} else {
+				Logger::error( 'Failed to store new customer ID for user ' . $user_id . '; legacy customer was kept.' );
+			}
+		}
 	}
 }
