@@ -123,7 +123,7 @@ class WC_Payments {
 		include_once WCPAY_ABSPATH . 'includes/admin/tracks/class-tracker.php';
 
 		self::$account             = new WC_Payments_Account( self::$api_client );
-		self::$customer_service    = new WC_Payments_Customer_Service( self::$api_client );
+		self::$customer_service    = new WC_Payments_Customer_Service( self::$api_client, self::$account );
 		self::$token_service       = new WC_Payments_Token_Service( self::$api_client, self::$customer_service );
 		self::$remote_note_service = new WC_Payments_Remote_Note_Service( WC_Data_Store::load( 'admin-note' ) );
 
