@@ -46,7 +46,7 @@ class WC_REST_Payments_Tos_Controller_Test extends WP_UnitTestCase {
 			->disableOriginalConstructor()
 			->getMock();
 		$account          = new WC_Payments_Account( $mock_api_client );
-		$customer_service = new WC_Payments_Customer_Service( $mock_api_client );
+		$customer_service = new WC_Payments_Customer_Service( $mock_api_client, $account );
 		$token_service    = new WC_Payments_Token_Service( $mock_api_client, $customer_service );
 		$this->gateway    = new WC_Payment_Gateway_WCPay( $mock_api_client, $account, $customer_service, $token_service );
 		$this->controller = new WC_REST_Payments_Tos_Controller( $mock_api_client, $this->gateway, $account );
